# mull

./: .bazelrc  .clang-format  .gitattributes  .gitignore  .gitmodules  .mull.rust.cmake.example  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  BUILD  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPackConfig.cmake  MODULE.bazel  Makefile  Makefile.centos  Makefile.macos  Makefile.ubuntu  Mull.LLVM.cmake  Mull.extensions.cmake  Mull.toolchain.OSX.cmake  Mull.toolchain.centos.cmake  Mull.toolchain.macos.cmake  Mull.toolchain.ubuntu.cmake  README.md  TODO.Mutang.toolchain.cmake  cloudsmith_runner.py  llvm_repos.bzl  mull-ci.yml  mull-clang  mull-clang++  mull_available_llvm_versions.bzl  mull_build.bzl  mull_deps.bzl  mull_package.bzl  mull_package_info.bzl  mull_publish.bzl  mull_supported_llvm_versions.bzl  (+4 more)
LLVMCompatibility/8.x.x/: CMakeLists.txt  LLVMCompatibility.cpp  LLVMCompatibility.h
googletest/: .gitignore  CMakeLists.txt  Makefile
lab/mutators/: CMakeLists.txt
lib/: Bitcode.cpp  BitcodeLoader.cpp  BitcodeMetadataReader.cpp  CMakeLists.txt  Compiler.cpp  Config.cpp  ConfigParser.cpp  Context.cpp  Driver.cpp  DynamicCallTree.cpp  Filter.cpp  ForkProcessSandbox.cpp  FunctionUnderTest.cpp  IDEDiagnostics.cpp  Laboratory.cpp  Logger.cpp  Mangler.cpp  ModuleLoader.cpp  MullJIT.cpp  MullModule.cpp  MutangModule.cpp  Mutant.cpp  MutantRunner.cpp  MutationEngine.cpp  MutationPoint.cpp  MutationsFinder.cpp  ObjectLoader.cpp  Path.cpp  ReachableFunction.cpp  Result.cpp  Runner.cpp  SQLiteReporter.cpp  SourceLocation.cpp  TestResult.cpp  TestRunner.cpp  Testee.cpp  UniqueIDProvider.cpp  Version.cpp
lib/AST/: ASTConstants.cpp  ASTFilter.cpp  ASTFinder.cpp  ASTMutationFilter.cpp  ASTMutationStorage.cpp  ASTMutations.cpp  ASTScalarMutationMatcher.cpp  ASTSearchTask.cpp  ASTVisitor.cpp  CMakeLists.txt  MullClangCompatibility.cpp
lib/Config/: CMakeLists.txt  ConfigParser.cpp  Configuration.cpp  ConfigurationOptions.cpp  ConfigurationParser.cpp  RawConfig.cpp  config_gen.py
lib/Core/: CMakeLists.txt  Mutant.cpp  SourceLocation.cpp
lib/CustomTestFramework/: CustomTestFinder.cpp  CustomTestRunner.cpp  CustomTest_Test.cpp
lib/Diagnostics/: CMakeLists.txt  Diagnostics.cpp
lib/Filters/: BlockAddressFunctionFilter.cpp  CMakeLists.txt  CoverageFilter.cpp  FilePathFilter.cpp  Filters.cpp  GitDiffFilter.cpp  GitDiffReader.cpp  JunkMutationFilter.cpp  ManualFilter.cpp  NoDebugInfoFilter.cpp  VariadicFunctionFilter.cpp
lib/GoogleTest/: GoogleTestFinder.cpp  GoogleTestFunctionFilter.cpp  GoogleTestMutationOperatorFilter.cpp  GoogleTestRunner.cpp  GoogleTest_Test.cpp
lib/IRFrontend/: CMakeLists.txt  Driver.cpp
lib/Instrumentation/: Callbacks.cpp  DynamicCallTree.cpp  Instrumentation.cpp  InstrumentationInfo.cpp
lib/JunkDetection/: CMakeLists.txt
lib/Metrics/: Metrics.cpp  MetricsMeasure.cpp
lib/Misc/: CMakeLists.txt  MetricsMeasure.cpp  Path.cpp  Version.cpp
lib/Mutation/: Bitcode.cpp  BitcodeMetadataReader.cpp  CMakeLists.txt  FunctionUnderTest.cpp  MutationPoint.cpp  MutationsFinder.cpp  Program.cpp
lib/MutationFilters/: FilePathFilter.cpp  JunkMutationFilter.cpp  NoDebugInfoFilter.cpp
lib/MutationOperators/: AddMutationOperator.cpp  AndOrReplacementMutationOperator.cpp  AndOrReplacementMutator.cpp  ConditionalsBoundaryMutator.cpp  MathAddMutationOperator.cpp  MathAddMutator.cpp  MathDivMutationOperator.cpp  MathDivMutator.cpp  MathMulMutationOperator.cpp  MathMulMutator.cpp  MathSubMutationOperator.cpp  MathSubMutator.cpp  MutationOperatorsFactory.cpp  MutatorsFactory.cpp  NegateConditionMutationOperator.cpp  NegateConditionMutator.cpp  RemoveVoidFunctionMutationOperator.cpp  RemoveVoidFunctionMutator.cpp  ReplaceAssignmentMutationOperator.cpp  ReplaceAssignmentMutator.cpp  ReplaceCallMutationOperator.cpp  ReplaceCallMutator.cpp  ScalarValueMutationOperator.cpp  ScalarValueMutator.cpp
lib/Mutators/: AndOrReplacementMutator.cpp  CMakeLists.txt  ConditionalsBoundaryMutator.cpp  MathAddMutator.cpp  MathDivMutator.cpp  MathMulMutator.cpp  MathSubMutator.cpp  MutatorKind.cpp  MutatorsFactory.cpp  NegateConditionMutator.cpp  OrAndReplacementMutator.cpp  RemoveVoidFunctionMutator.cpp  ReplaceAssignmentMutator.cpp  ReplaceCallMutator.cpp  ScalarValueMutator.cpp
lib/Parallelization/: CMakeLists.txt  Parallelization.cpp  Progress.cpp  TaskExecutor.cpp
lib/Program/: Program.cpp
lib/Reporters/: ASTSourceInfoProvider.cpp  ASTWhitelistSourceInfoProvider.cpp  CMakeLists.txt  GithubAnnotationsReporter.cpp  IDEReporter.cpp  MutationTestingElementsReporter.cpp  PatchesReporter.cpp  SQLiteReporter.cpp  SourceCodeReader.cpp  SourceManager.cpp  TimeReporter.cpp
lib/Runner/: CMakeLists.txt  MutantRunner.cpp  Runner.cpp
lib/Rust/: RustSymbolDemangling.cpp  RustTest.cpp  RustTestFinder.cpp  RustTestRunner.cpp
lib/Sandbox/: ProcessSandbox.cpp
lib/SimpleTest/: SimpleTestFinder.cpp  (+2 more)
projects/: CMakeLists.txt
rust/: BUILD.bazel  Cargo.toml  check_lockfile.sh  check_toolchain_versions.sh  lib.rs  update_lockfile.sh
tests/: CMakeLists.txt  CompilerTests.cpp  ConfigParserTestFixture.h  ConfigParserTests.cpp  DriverTests.cpp  DynamicCallTreeTests.cpp  ForkProcessSandboxTest.cpp  ModuleLoaderTest.cpp  MutationPointTests.cpp  MutationTestingElementsReporterTest.cpp  MutatorsFactoryTests.cpp  ProcessSandboxTest.cpp  SQLiteReporterTest.cpp  TaskExecutorTests.cpp  TestModuleFactory.cpp  TestModuleFactory.h  TestRunnersTests.cpp  TesteesTests.cpp  UniqueIdentifierTests.cpp
tests-lit/: .gitignore  CMakeLists.txt  Makefile  lit.cfg
unittests/: CMakeLists.txt  CompilerTests.cpp  ConfigParserTestFixture.h  ConfigParserTests.cpp  ContextTest.cpp  DriverTests.cpp  DynamicCallTreeTests.cpp  ForkProcessSandboxTest.cpp  ModuleLoaderTest.cpp  MutationEngineTests.cpp  MutationOperatorsFactoryTests.cpp  MutationPointTests.cpp  MutatorsFactoryTests.cpp  SQLiteReporterTest.cpp  SimpleTestFinderTest.cpp  TaskExecutorTests.cpp  TestModuleFactory.cpp  TestModuleFactory.h  TestRunnersTests.cpp  TesteesTests.cpp  UniqueIDProvierTests.cpp  UniqueIdentifierTests.cpp
(+1987 files in other folders)
